--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -128,7 +128,7 @@
   flex-direction: column;
 }
 
-.warriorCards {
+.warriorCardsWrapper {
   flex: 1;
   background: linear-gradient(180deg, #353a40 -56.47%, #16171b 100%);
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3),
@@ -136,14 +136,16 @@
   border-radius: 34px;
   border: 2px solid #424750;
   padding: 35px 30px;
+  margin-bottom: 56px;
+}
 
+.warriorCards {
+  height: 100%;
   display: grid;
   grid-template-columns: auto auto;
   gap: 1.5rem 1rem;
-
   justify-content: space-between;
   align-content: space-between;
-  margin-bottom: 56px;
 }
 
 @media (min-width: 1500px) {
@@ -153,6 +155,6 @@
 }
 @media (max-width: 1400px) {
   .homeContent {
-    gap: 30px;
+    gap: 20px;
   }
 }
